Initial mod setup.
Added example block, example item and example config.
Created customized kotlin-dsl buildscript, with automatic version string
assignment based on git commit history.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,11 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+modid=genesis
+forgeVersion=1.14.3-27.0.57
+mappingsVersion=20190718-1.14.3
+
+versionType=
+forceVersion=
+release=false
